chore: setup new multi-module build infrastructure